# rust-prisoner-dilemma

./: .gitignore  Makefile  README.md
.github/workflows/: rust.yml
back/: Cargo.toml
back/src/: controller.rs  main.rs
front/: Cargo.toml
front/src/: controller.rs  main.rs
front/ui/: appwindow.slint
settings/: Cargo.toml  settings.json
settings/src/: lib.rs
settings/tests/: fixture_settings.json  log_tests.rs  settings_test.rs
