[package]
name = "front"
version = "0.1.0"
authors = ["tch <tristan.chretien@tenacy.io>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"
settings = { path = "../settings" }

[build-dependencies]
slint-build = "1.0"
settings = { path = "../settings" }